--- a/www/index.html
+++ b/www/index.html
@@ -334,7 +334,7 @@
     
     <div class="right">
        <ons-toolbar-button onclick="viewHistory();"><ons-icon icon="ion-ios-help"></ons-icon></ons-toolbar-button>
-       <ons-toolbar-button onclick="print();"><ons-icon icon="ion-ios-printer-outline"></ons-icon></ons-toolbar-button>
+       <ons-toolbar-button onclick="print();" style="display: none;"><ons-icon icon="ion-ios-printer-outline" style="display: none;"></ons-icon></ons-toolbar-button>
     </div>
     
    </ons-toolbar>
